# multi-llm-speed-comparison

./: .env.copy  .gitignore  AGENTS.md  README.md  llm_evaluation_output_example.xlsx  pyproject.toml
src/llm_response_time_evaluation/: __main__.py  cli.py  clients.py  config.py  runner.py
src/multi_llm_speed_comparison/: __init__.py  __main__.py  cli.py  clients.py  config.py  runner.py
