[project]
name = "multi-llm-speed-comparison"
version = "0.1.0"
description = "Benchmark LLM response latency and output token throughput across providers."
readme = "README.md"
authors = [
    { name = "nick", email = "17940498+codeHui@users.noreply.github.com" }
]
requires-python = "==3.12.*"
dependencies = [
    "azure-identity==1.21.0",
    "openai==1.68.2",
    "openpyxl==3.1.5",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "tiktoken==0.7.0",
]

[project.scripts]
multi-llm-speed-comparison = "multi_llm_speed_comparison.cli:main"

[build-system]
requires = ["uv_build==0.9.16"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff==0.6.9",
]
